# gecode-lns

./: CMakeLists.txt  Makefile  README.md  gecode_lns.patch  hybrid_gecode.patch  hybrid_model.h  lns.C  lns.h  lns_space.h  meta_lns.C  meta_lns.h  tsp_lns.C
cmake/: FindGecode.cmake
gecode-lns/gecode-lns.xcodeproj/: project.pbxproj
gecode-lns/gecode-lns.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gecode-lns/gecode-lns.xcodeproj/project.xcworkspace/xcuserdata/digaspero.xcuserdatad/: UserInterfaceState.xcuserstate
gecode-lns/gecode-lns.xcodeproj/xcuserdata/digaspero.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
gecode-lns/gecode-lns.xcodeproj/xcuserdata/digaspero.xcuserdatad/xcschemes/: gecode-lns.xcscheme  xcschememanagement.plist
include/gecode-lns/: deferred_branching.hh  lns.hh  lns_space.hh  meta_lns.hh
misc/: hybrid_gecode.patch
src/: CMakeLists.txt  lns.cc  meta_lns.cc
test/: CMakeLists.txt  tsp_lns.cc
